# aRibeiroPlatform

./: CMakeLists.txt  README.md
cmake/: 01_tools.cmake
cmake/libs/: libaRibeiroCore.cmake
docs/: how-to-build.md  index.md
docs/aRibeiroPlatform/: feature-mac-address.md  feature-path.md  feature-thread-mutex.md  feature-time-sleep.md
src/: AlgorithmsOpenMP.cpp  AlgorithmsOpenMP.h  AlgorithmsThread.cpp  AlgorithmsThread.h  DebugConsoleIPC.h  GetFirstMacAddress.cpp  GetFirstMacAddress.h  GlobalThreadOptions.cpp  GlobalThreadOptions.h  NetworkConstants.h  RandomInstantiableThreadSafe.h  ThreadPool.cpp  ThreadPool.h  aRibeiroPlatform.h.in
src/DataObject/: ObjectBuffer.h  ObjectPool.h  ObjectQueue.h
src/Platform/: AppleSpecialSemaphore.h  PlatformAutoLock.h  PlatformBufferIPC.cpp  PlatformBufferIPC.h  PlatformLowLatencyQueueIPC.cpp  PlatformLowLatencyQueueIPC.h  PlatformMutex.cpp  PlatformMutex.h  PlatformPath.cpp  PlatformPath.h  PlatformProcess.cpp  PlatformProcess.h  PlatformQueueIPC.cpp  PlatformQueueIPC.h  PlatformSemaphore.h  PlatformSemaphoreIPC.h  PlatformSignal.cpp  PlatformSignal.h  PlatformSleep.cpp  PlatformSleep.h  PlatformSocketTCP.h  PlatformSocketUDP.h  PlatformSocketUtils.cpp  PlatformSocketUtils.h  PlatformThread.cpp  PlatformThread.h  PlatformTime.cpp  PlatformTime.h  UnixPipe.cpp  UnixPipe.h  WindowsPipe.cpp  WindowsPipe.h
